@@ -1,25 +1,23 @@
 package au.com.sensis.stubby.js;
 
-import au.com.sensis.stubby.script.Script;
-import au.com.sensis.stubby.script.ScriptWorld;
-
-import static org.junit.Assert.assertEquals;
-import static org.junit.Assert.assertNull;
-
 import java.io.Serializable;
 import java.util.ArrayList;
 import java.util.List;
 
+import org.junit.Assert;
 import org.junit.Before;
 import org.junit.Test;
 
 import au.com.sensis.stubby.model.StubExchange;
-import au.com.sensis.stubby.model.StubParam;
 import au.com.sensis.stubby.model.StubRequest;
 import au.com.sensis.stubby.model.StubResponse;
+import au.com.sensis.stubby.script.Script;
+import au.com.sensis.stubby.script.ScriptWorld;
 
 public class ScriptTest {
-
+    /**
+     * Test bean - needs to be public for script access.
+     */
     @SuppressWarnings("serial")
     public static class TestBean implements Serializable {
         private List<String> items = new ArrayList<String>();
@@ -52,10 +50,8 @@ public class ScriptTest {
         request = new StubRequest();
         request.setMethod("POST");
         request.setPath("/request/path");
-        request.setParams(new ArrayList<StubParam>());
-        request.getParams().add(new StubParam("foo", "bar"));
-        request.setHeaders(new ArrayList<StubParam>());
-        request.getHeaders().add(new StubParam("Content-Type", "text/plain"));
+        request.setParam("foo", "bar");
+        request.setHeader("Content-Type", "text/plain");
         request.setBody("request body");
     }
 
@@ -69,8 +65,7 @@ public class ScriptTest {
 
     private void givenDefaultResponse() {
         response = new StubResponse();
-        response.setHeaders(new ArrayList<StubParam>());
-        response.getHeaders().add(new StubParam("Content-Type", "application/json"));
+        response.setHeader("Content-Type", "application/json");
         response.setBody("response body");
         response.setStatus(200);
     }
@@ -94,98 +89,98 @@ public class ScriptTest {
 
     @Test
     public void testSimpleExpr() {
-        assertEquals(Double.valueOf(3.0), execute("var a = 1; var b = 2; a + b;"));
+        Assert.assertEquals(Double.valueOf(3.0), execute("var a = 1; var b = 2; a + b;"));
     }
 
     @Test
     public void testGetDelay() {
-        assertEquals(Long.valueOf(1234L), execute("exchange.delay"));
+        Assert.assertEquals(Long.valueOf(1234L), execute("exchange.delay"));
     }
 
     @Test
     public void setSetDelay() {
         execute("exchange.delay = 666");
-        assertEquals(Long.valueOf(666L), world.getDelay());
+        Assert.assertEquals(Long.valueOf(666L), world.getDelay());
     }
 
     @Test
     public void testGetRequestFields() {
-        assertEquals("POST", execute("exchange.request.method"));
-        assertEquals("/request/path", execute("exchange.request.path"));
-        assertEquals("bar", execute("exchange.request.getParams('foo').get(0)"));
-        assertEquals("bar", execute("exchange.request.getParam('foo')"));
-        assertEquals("text/plain", execute("exchange.request.getHeader('content-type')")); // ensure case insensitive
-        assertEquals("request body", execute("exchange.request.body"));
+        Assert.assertEquals("POST", execute("exchange.request.method"));
+        Assert.assertEquals("/request/path", execute("exchange.request.path"));
+        Assert.assertEquals("bar", execute("exchange.request.getParams('foo').get(0)"));
+        Assert.assertEquals("bar", execute("exchange.request.getParam('foo')"));
+        Assert.assertEquals("text/plain", execute("exchange.request.getHeader('content-type')")); // ensure case insensitive
+        Assert.assertEquals("request body", execute("exchange.request.body"));
     }
 
     @Test
     public void testGetResponseFields() {
-        assertEquals(new Integer(200), execute("exchange.response.status"));
-        assertEquals("application/json", execute("exchange.response.getHeader('content-type')")); // ensure case insensitive
-        assertEquals("response body", execute("exchange.response.body"));
+        Assert.assertEquals(Integer.valueOf(200), execute("exchange.response.status"));
+        Assert.assertEquals("application/json", execute("exchange.response.getHeader('content-type')")); // ensure case insensitive
+        Assert.assertEquals("response body", execute("exchange.response.body"));
     }
 
     @Test
     public void testSetResponseFields() {
         execute("exchange.response.status = 501");
-        assertEquals(new Integer(501), world.getResponse().getStatus());
+        Assert.assertEquals(Integer.valueOf(501), world.getResponse().getStatus());
 
-        execute("exchange.response.setHeader('Content-Type', 'text/xml')");
-        assertEquals("text/xml", world.getResponse().getHeader("content-type")); // ensure case insensitive
+        execute("exchange.response.removeHeaders('Content-Type'); exchange.response.setHeader('Content-Type', 'text/xml')");
+        Assert.assertEquals("text/xml", world.getResponse().getHeader("content-type")); // ensure case insensitive
 
-        execute("exchange.response.removeHeader('Content-Type')");
-        assertNull(world.getResponse().getHeader("content-type"));
+        execute("exchange.response.removeHeaders('Content-Type')");
+        Assert.assertNull(world.getResponse().getHeader("content-type"));
 
         execute("exchange.response.body = 'foo'");
-        assertEquals("foo", world.getResponse().getBody());
+        Assert.assertEquals("foo", world.getResponse().getBody());
     }
 
     @Test
     public void testGetRequestJsonBody() {
         givenJsonRequestBody();
-        assertEquals("one", execute("exchange.request.body.items.get(0)"));
-        assertEquals("two", execute("exchange.request.body.items.get(1)"));
+        Assert.assertEquals("one", execute("exchange.request.body.items.get(0)"));
+        Assert.assertEquals("two", execute("exchange.request.body.items.get(1)"));
     }
 
     @Test
     public void testSetRequestJsonBody() {
         givenJsonRequestBody();
         execute("exchange.request.body.items.add('three')");
-        assertEquals(2, testBean.getItems().size()); // assert original not changed
-        assertEquals(3, ((TestBean)world.getRequest().getBody()).getItems().size());
+        Assert.assertEquals(2, testBean.getItems().size()); // assert original not changed
+        Assert.assertEquals(3, ((TestBean) world.getRequest().getBody()).getItems().size());
     }
 
     @Test
     public void testGetResponseJsonBody() {
         givenJsonResponseBody();
-        assertEquals("one", execute("exchange.response.body.items.get(0)"));
-        assertEquals("two", execute("exchange.response.body.items.get(1)"));
+        Assert.assertEquals("one", execute("exchange.response.body.items.get(0)"));
+        Assert.assertEquals("two", execute("exchange.response.body.items.get(1)"));
     }
 
     @Test
     public void testSetResponseJsonBody() {
         givenJsonResponseBody();
         execute("exchange.response.body.items.add('three')");
-        assertEquals(2, testBean.getItems().size()); // assert original not changed
-        assertEquals(3, ((TestBean)world.getResponse().getBody()).getItems().size());
+        Assert.assertEquals(2, testBean.getItems().size()); // assert original not changed
+        Assert.assertEquals(3, ((TestBean) world.getResponse().getBody()).getItems().size());
     }
 
     @Test
     public void testGroovyGetRequestFields() {
         exchange.setScriptType("groovy");
-        assertEquals("POST", execute("exchange.request.method"));
-        assertEquals("/request/path", execute("exchange.request.path"));
-        assertEquals("bar", execute("exchange.request.getParams('foo').get(0)"));
-        assertEquals("bar", execute("exchange.request.getParam('foo')"));
-        assertEquals("text/plain", execute("exchange.request.getHeader('content-type')")); // ensure case insensitive
-        assertEquals("request body", execute("exchange.request.body"));
+        Assert.assertEquals("POST", execute("exchange.request.method"));
+        Assert.assertEquals("/request/path", execute("exchange.request.path"));
+        Assert.assertEquals("bar", execute("exchange.request.getParams('foo').get(0)"));
+        Assert.assertEquals("bar", execute("exchange.request.getParam('foo')"));
+        Assert.assertEquals("text/plain", execute("exchange.request.getHeader('content-type')")); // ensure case insensitive
+        Assert.assertEquals("request body", execute("exchange.request.body"));
     }
 
     @Test
     public void testGroovyGetResponseFields() {
         exchange.setScriptType("groovy");
-        assertEquals(Integer.valueOf(200), execute("exchange.response.status"));
-        assertEquals("application/json", execute("exchange.response.getHeader('content-type')")); // ensure case insensitive
-        assertEquals("response body", execute("exchange.response.body"));
+        Assert.assertEquals(Integer.valueOf(200), execute("exchange.response.status"));
+        Assert.assertEquals("application/json", execute("exchange.response.getHeader('content-type')")); // ensure case insensitive
+        Assert.assertEquals("response body", execute("exchange.response.body"));
     }
 }
